--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "jquery": "^2.2.1",
     "lodash": "^4.6.1",
     "moment": "^2.12.0",
-    "react": "^0.14.7"
+    "react": "^0.14.7",
+    "react-redux": "^4.4.0",
+    "redux": "^3.3.1"
+  },
+  "devDependencies": {
+    "redux-devtools": "^3.1.1"
   }
 }
