--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Web application that shows the most common web vulnerabilities",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node node_modules/.bin/webpack"
   },
   "repository": {
     "type": "git",
@@ -17,12 +17,23 @@
   },
   "homepage": "https://github.com/cakefuelled/MySecureBank#readme",
   "dependencies": {
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2016": "^6.0.6",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0",
+    "babel-runtime": "^6.6.1",
     "jquery": "^2.2.1",
     "lodash": "^4.6.1",
     "moment": "^2.12.0",
     "react": "^0.14.7",
+    "react-dom": "^0.14.7",
     "react-redux": "^4.4.0",
-    "redux": "^3.3.1"
+    "react-router": "^2.0.1",
+    "redux": "^3.3.1",
+    "redux-form": "^4.2.2",
+    "redux-promise": "^0.5.1",
+    "webpack": "^1.12.14"
   },
   "devDependencies": {
     "redux-devtools": "^3.1.1"
