--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lodash": "^4.6.1",
     "moment": "^2.12.0",
     "react": "^0.14.7",
+    "react-bootstrap": "^0.28.3",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.0",
     "react-router": "^2.0.1",
