--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Web application that shows the most common web vulnerabilities",
   "main": "index.js",
   "scripts": {
-    "build": "node node_modules/.bin/webpack"
+    "build": "node node_modules/.bin/webpack",
+    "dev": "webpack-dev-server --content-base build/"
   },
   "repository": {
     "type": "git",
@@ -37,6 +38,7 @@
     "webpack": "^1.12.14"
   },
   "devDependencies": {
-    "redux-devtools": "^3.1.1"
+    "redux-devtools": "^3.1.1",
+    "webpack-dev-server": "^1.14.1"
   }
 }
