--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "node node_modules/.bin/webpack",
-    "dev": "webpack-dev-server --content-base build/"
+    "dev": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
